@startuml

title __MODEL's Class Diagram__\n

    namespace com.mareena.mediacatalogue {
      namespace swing.model {
        class com.mareena.mediacatalogue.swing.model.BaseModel {
            + BaseModel()
            + getVideoCatalogueController()
        }
      }
    }
  

    namespace com.mareena.mediacatalogue {
      namespace swing.model {
        class com.mareena.mediacatalogue.swing.model.ListByYearAndGenreModel {
            + ListByYearAndGenreModel()
            + getMediaByGenre()
            + getMediaByYear()
        }
      }
    }

    namespace com.mareena.mediacatalogue {
      namespace swing.model {
        class com.mareena.mediacatalogue.swing.model.MediaModel {
            + MediaModel()
            + getCastText()
            + getGenresText()
            + getMedia()
            + getMediaNameAndGenre()
            + getVideoCatalogueController()
            + setMedia()
        }
      }
    }

    namespace com.mareena.mediacatalogue {
      namespace swing.model {
        class com.mareena.mediacatalogue.swing.model.VideoCatalogueModel {
            ~ mediaList : List<Media>
            - listCount : int
            + VideoCatalogueModel()
            + getCurrentUser()
            + getElementAt()
            + getSize()
            + getVideoCatalogueController()
            + setCurrentUser()
            + setUsersMediaList()
            + updateCurrentUser()
        }
      }
    }
  

  com.mareena.mediacatalogue.swing.model.BaseModel o-- com.mareena.mediacatalogue.controller.VideoCatalogueController : videoCatalogueController
  com.mareena.mediacatalogue.swing.model.ListByYearAndGenreModel o-- com.mareena.mediacatalogue.model.json.MediaCatalogue : mediaCatalogue
  com.mareena.mediacatalogue.swing.model.ListByYearAndGenreModel o-- com.mareena.mediacatalogue.controller.VideoCatalogueController : videoCatalogueController
  com.mareena.mediacatalogue.swing.model.MediaModel o-- com.mareena.mediacatalogue.model.json.Media : media
  com.mareena.mediacatalogue.swing.model.MediaModel o-- com.mareena.mediacatalogue.controller.VideoCatalogueController : videoCatalogueController
  com.mareena.mediacatalogue.swing.model.VideoCatalogueModel -up-|> javax.swing.AbstractListModel
  com.mareena.mediacatalogue.swing.model.VideoCatalogueModel o-- com.mareena.mediacatalogue.model.json.Profile : currentUser
  com.mareena.mediacatalogue.swing.model.VideoCatalogueModel o-- com.mareena.mediacatalogue.model.json.MediaCatalogue : mediaCatalogue
  com.mareena.mediacatalogue.swing.model.VideoCatalogueModel o-- com.mareena.mediacatalogue.controller.VideoCatalogueController : videoCatalogueController


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
